Refactor ReactorOutputEntity and related classes
- Removed unused methods and variables in ReactorOutputEntity.
- Updated method names to follow Java naming conventions.
- Simplified potion registration in CNPotions and PotionBuilder.
- Cleaned up imports and added missing annotations in various classes.
- Deleted CustomSpawnEgg class as it was no longer needed.
- Improved EnrichingCampfireBlock logic and removed redundant code.
- Added ReinforcedGlassBlock and updated UraniumOreBlock with proper annotations.
- Removed unnecessary CNOrePlacement class and cleaned up CNPlacedFeatures.
- Updated CNLayerPatterns to suppress unused warnings.